kubernetes/main/apps/observability/victoria-logs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: victoriametrics.png
    gethomepage.dev/name: Logs
    gethomepage.dev/group: Observability
    gethomepage.dev/pod-selector: app.kubernetes.io/name=victoria-logs-single
  name: victoria-logs-server
spec:
  hostnames:
    - logs.kosh.casa
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
